--- a/app/globals.css
+++ b/app/globals.css
@@ -1,26 +1,54 @@
 @import "tailwindcss";
 
+@layer base {
+	@font-face {
+		font-family: "establishThornFontOTF";
+		src: url("https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_2112@1.0/establishThornFontOTF.woff")
+			format("woff");
+		font-weight: normal;
+		font-style: normal;
+	}
+
+	:root {
+		--background: #0a0a0a;
+		--foreground: #ededed;
+		--font-establish-thorn: establishThornFontOTF, sans-serif;
+	}
+}
+
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+	--background: #ffffff;
+	--foreground: #171717;
 }
 
 @theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+	--color-background: var(--background);
+	--color-foreground: var(--foreground);
+	--font-sans: var(--font-geist-sans);
+	--font-mono: var(--font-geist-mono);
+	--font-bm-dohyeon: var(--font-bm-dohyeon);
+	--font-bm-euljiro: var(--font-bm-euljiro);
+	--font-bm-euljiro-10: var(--font-bm-euljiro-10);
+	--font-bm-euljiro-orae: var(--font-bm-euljiro-orae);
+	--font-bm-hanna-air: var(--font-bm-hanna-air);
+	--font-bm-hanna-pro: var(--font-bm-hanna-pro);
+	--font-bm-hanna-11: var(--font-bm-hanna-11);
+	--font-bm-jua: var(--font-bm-jua);
+	--font-bm-kirang: var(--font-bm-kirang);
+	--font-bm-kkubulim: var(--font-bm-kkubulim);
+	--font-bm-yeonsung: var(--font-bm-yeonsung);
 }
 
 @media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+	:root {
+		--background: #0a0a0a;
+		--foreground: #ededed;
+	}
 }
 
 body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+	background: var(--background);
+	color: var(--foreground);
+	font-family: Arial, Helvetica, sans-serif;
+	caret-color: transparent;
 }
