--- a/app/globals.css
+++ b/app/globals.css
@@ -52,3 +52,9 @@ body {
 	font-family: Arial, Helvetica, sans-serif;
 	caret-color: transparent;
 }
+
+.line {
+	display: inline-block;
+	overflow: hidden;
+	white-space: pre;
+}
