Style: gsap 의 splittext의 mask 호환을 위한 스타일 추가

--- a/app/globals.css
+++ b/app/globals.css
@@ -54,8 +54,11 @@ body {
 }
 
 .line {
-	display: inline-block;
+	display: inline-flex;
 	overflow: hidden;
+	vertical-align: baseline;
+}
+.word {
 }
 
 .text-korean {
